spud (0.4-1) lucid; urgency=low

  * Enable sql transaction support by default.
  * Add ability to override src timezone and offset on per camera basis.
  * Fix errors when display photos using redirect urls.
  * Fix errors in breadcrumbs for creating albums,categories and places.

 -- Brian May <bam@debian.org>  Sat, 02 Apr 2011 16:19:01 +1100

spud (0.3-1) lucid; urgency=low

  * Add missing depends on python-pyparsing and python-imaging.
  * Add suggests on python-mysqldb.
  * Add spud_process_actions binary to package.

 -- Brian May <brian@debian.org>  Wed, 02 Mar 2011 11:28:33 +1100

spud (0.2-2) lucid; urgency=low

  * Fix postinst script.
  * Remove obsolete fastcgi stuff.
  * Turn on following symlinks under media directory.

 -- Brian May <bam@debian.org>  Tue, 19 Oct 2010 09:37:30 +1100

spud (0.2-1) lucid; urgency=low

  * Many bugs removed to a better place.

 -- Brian May <bam@debian.org>  Mon, 13 Sep 2010 13:15:09 +1000

spud (0.1-1) lucid; urgency=low

  * Initial release.

 -- Brian May <bam@debian.org>  Sat, 17 Jul 2010 10:30:08 +1000