@@ -84,6 +84,7 @@ IMAGE_SIZES = {
     'thumb': 120,
     'large': 960,
 }
+DEFAULT_SIZE='mid'
 
 DEFAULT_TIMEZONE = {}
 DEFAULT_DTOFFSET = {}
