@@ -4,6 +4,7 @@ spud (0.4-1) lucid; urgency=low
   * Add ability to override src timezone and offset on per camera basis.
   * Fix errors when display photos using redirect urls.
   * Fix errors in breadcrumbs for creating albums,categories and places.
+  * Add extended abilities for large image photos.
 
  -- Brian May <bam@debian.org>  Sat, 02 Apr 2011 16:19:01 +1100
 
